# templatespiler

./: .envrc  .gitignore  .hlint.yaml  .pre-commit-config.yaml  README.md  a.out  cabal.project  flake.nix  hie.yaml  justfile  templatespiler.cf  templatespliler.cabal  test.tmpspl  test.tmpspl.c  test.tmpspl.hs  test.tmpspl.py  test.tmpspl.stdin
.devenv/: profile
.github/workflows/: ci.yaml  swagger-ui.yaml
Templ/Templatespiler/: Abs.hi  Abs.hs  Abs.hs.bak  Doc.txt.bak  ErrM.hs  Lex.hi  Lex.hs  Lex.x  Lex.x.bak  Par.hi  Par.hs  Par.info  Par.y  Par.y.bak  Print.hi  Print.hs  Print.hs.bak  Skel.hi  Skel.hs  Skel.hs.bak  Test.hi  Test.hs  Test.hs.bak
src/: Main.hs
src/Language/Templatespiler/: Abs.hs  Lex.x  Par.y  Print.hs  Skel.hs  Test.hs
src/Templatespiler/: AST.hs  CodeGen.hs  Parser.hs
src/Templatespiler/CodeGen/: C.hs  Haskell.hs  Java.hs
templatespiler-bnf/: bnf.cabal
templatespiler-bnf/.src/Language/Templatespiler/: Abs.hs  Doc.txt  ErrM.hs  Par.y  Print.hs  Skel.hs
templatespiler-bnf/src/: Main.hs
templatespiler-bnf/src/Language/Templatespiler/: Abs.hs  Doc.txt  ErrM.hs  Lex.x  Par.y  Print.hs  Skel.hs
templatespiler-converter/: converter.cabal
templatespiler-converter/app/: Main.hs
templatespiler-converter/src/: Main.hs
templatespiler-converter/src/Templatespiler/: Convert.hs  Validate.hs
templatespiler-converter/src/Templatespiler/Convert/: C.hs  Common.hs  Python.hs  Target.hs  Targets.hs  ToDeclarative.hs  ToImperative.hs  Warning.hs
templatespiler-converter/src/Templatespiler/Emit/: C.hs  Common.hs  Haskell.hs  Python.hs  Target.hs
templatespiler-converter/src/Templatespiler/IR/: Common.hs  Declarative.hs  Imperative.hs
templatespiler-converter/src/Templatespiler/ToLang/: C.hs  Haskell.hs  Monad.hs  Python.hs  Target.hs
templatespiler-converter/test/: Main.hs  Util.hs
templatespiler-generator/: generator.cabal
templatespiler-generator/src/: Main.hs
templatespiler-generator/src/Templatespiler/: Generate.hs  Generator.hs
templatespiler-integration-tests/: integration-tests.cabal
templatespiler-integration-tests/src/: Main.hs
templatespiler-parser/: parser.cabal
templatespiler-parser/src/: Main.hs
templatespiler-parser/src/Language/Templatespiler/: Parser.hs  Pretty.hs  Syntax.hs
templatespiler-parser/test/: Main.hs
templatespiler-server/: openapi.json  openapi.yaml  server.cabal
templatespiler-server/src/: Main.hs
templatespiler-server/src/Templatespiler/: Generate.hs  Server.hs
