cabal-version:      3.4
name:               bnf
version:            0.1.0.0
license:            MIT
copyright:          2023 Alexander Wood
maintainer:         alexwood2403@gmail.com
author:             Alexander Wood
category:           Web

common shared
  hs-source-dirs: src
  build-depends:
    , base
    , BNFC
    , text
    , array
  
  build-tool-depends:
    , alex:alex
    , happy:happy

  default-language:   GHC2021

library
  import: shared
  hs-source-dirs: src
  
  exposed-modules:
    Language.Templatespiler.Abs
    Language.Templatespiler.ErrM
    Language.Templatespiler.Lex
    Language.Templatespiler.Par
    Language.Templatespiler.Print
    Language.Templatespiler.Skel

executable bnf-test
  import: shared
  main-is:        Main.hs

  other-modules:
    Language.Templatespiler.Abs
    Language.Templatespiler.ErrM
    Language.Templatespiler.Lex
    Language.Templatespiler.Par
    Language.Templatespiler.Print
    Language.Templatespiler.Skel