cabal-version: 3.4
name:          templatespiler-converter
version:       0.1.0.0
license:       MIT
copyright:     2023 Alexander Wood
maintainer:    alexwood2403@gmail.com
author:        Alexander Wood
category:      Web

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -threaded -rtsopts
    -with-rtsopts=-N

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DerivingStrategies
    OverloadedStrings

  build-depends:
    , base
    , containers
    , filepath
    , mtl
    , prettyprinter
    , prettyprinter-ansi-terminal
    , relude                       >=1.0
    , templatespiler-parser
    , trifecta
    , with-utf8

  default-language:   GHC2021

library
  import:          shared
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Templatespiler.Convert
    Templatespiler.Convert.Target
    Templatespiler.Convert.ToDeclarative
    Templatespiler.Convert.ToImperative
    Templatespiler.Emit.C
    Templatespiler.Emit.Common
    Templatespiler.Emit.Haskell
    Templatespiler.Emit.Python
    Templatespiler.Emit.Target
    Templatespiler.IR.Common
    Templatespiler.IR.Declarative
    Templatespiler.IR.Imperative
    Templatespiler.ToLang.C
    Templatespiler.ToLang.Haskell
    Templatespiler.ToLang.Monad
    Templatespiler.ToLang.Python
    Templatespiler.ToLang.Target

executable converter
  import:         shared
  main-is:        Main.hs
  build-depends:  templatespiler-converter
  hs-source-dirs: app
