cabal-version: 3.4
name:          templatespiler-generator
version:       0.1.0.0
license:       MIT
copyright:     2023 Alexander Wood
maintainer:    alexwood2403@gmail.com
author:        Alexander Wood
category:      Web

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions: OverloadedStrings
  build-depends:
    , base
    , data-default
    , directory
    , filepath
    , hedgehog
    , mtl
    , prettyprinter
    , relude                 >=1.0
    , templatespiler-parser
    , time
    , trifecta
    , with-utf8

  default-language:   GHC2021

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules: Templatespiler.Generate

executable generator
  import:         shared
  main-is:        Main.hs
  build-depends:  templatespiler-generator
  hs-source-dirs: app
