cabal-version: 3.4
name:          templatespiler-integration-tests
version:       0.1.0.0
license:       MIT
copyright:     2023 Alexander Wood
maintainer:    alexwood2403@gmail.com
author:        Alexander Wood
category:      Web

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -threaded -rtsopts
    -with-rtsopts=-N

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DerivingStrategies
    OverloadedStrings

  build-depends:
    , base
    , containers
    , filepath
    , prettyprinter
    , prettyprinter-ansi-terminal
    , relude                       >=1.0
    , templatespiler-parser
    , trifecta

  default-language:   GHC2021

executable test
  import:             shared
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  build-depends:
    , async
    , hedgehog                  >=1.4
    , process
    , resourcet
    , sydtest
    , sydtest-hedgehog
    , templatespiler-converter
    , templatespiler-generator
    , temporary-resourcet

  default-extensions: TemplateHaskell
  hs-source-dirs:     src
