cabal-version: 3.4
name:          templatespiler-parser
version:       0.1.0.0
license:       MIT
copyright:     2023 Alexander Wood
maintainer:    alexwood2403@gmail.com
author:        Alexander Wood
category:      Web

common shared
  build-depends:
    , base
    , parsers                      >=0.12 && <0.13
    , prettyprinter
    , prettyprinter-ansi-terminal
    , relude
    , text
    , trifecta

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-language: GHC2021

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules:
    Language.Templatespiler.Parser
    Language.Templatespiler.Pretty
    Language.Templatespiler.Syntax

test-suite test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , hedgehog
    , templatespiler-parser

  hs-source-dirs: test
