cabal-version: 3.4
name:          templatespiler-server
version:       0.1.0.0
license:       MIT
copyright:     2023 Alexander Wood
maintainer:    alexwood2403@gmail.com
author:        Alexander Wood
category:      Web

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions: OverloadedStrings
  build-depends:
    , aeson
    , base
    , data-default
    , directory
    , filepath
    , mtl
    , openapi3
    , prettyprinter
    , relude                    >=1.0
    , servant
    , servant-openapi3
    , shower
    , templatespiler-converter
    , templatespiler-generator
    , templatespiler-parser
    , time
    , trifecta
    , uuid

  default-language:   GHC2021

executable generator
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: src
