cabal-version: 3.4
name:          templatespiler-server
version:       0.1.0.0
license:       MIT
copyright:     2023 Alexander Wood
maintainer:    alexwood2403@gmail.com
author:        Alexander Wood
category:      Web

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions: OverloadedStrings
  build-depends:
    , aeson
    , base
    , base64                     >=1.0
    , data-default
    , directory
    , filepath
    , lens
    , mtl
    , openapi3
    , optparse-applicative
    , prettyprinter
    , prometheus-client
    , prometheus-metrics-ghc
    , relude                     >=1.0
    , servant
    , servant-openapi3
    , servant-server
    , templatespiler-converter
    , templatespiler-generator
    , templatespiler-parser
    , time
    , trifecta
    , uuid
    , wai
    , wai-cors
    , wai-extra
    , wai-middleware-prometheus
    , warp

  default-language:   GHC2021

executable server
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: src
  other-modules:  Templatespiler.Server
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
